Added an indentation layer

--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -23,7 +23,9 @@ library
                      , Language.Python.Internal.Syntax
                      , Language.Python.Validate.Syntax
                      , Language.Python.Validate.Syntax.Error
-  build-depends:       base >=4.9 && <4.11, lens, type-level-sets
+                     , Language.Python.Validate.Indentation
+                     , Language.Python.Validate.Indentation.Error
+  build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2 -Wall
