Revert "Indentation checking is no longer necessary"
This reverts commit 62c1a8fd2ad0846d774ca3d7e0fd2ddc40f976eb.

--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -23,6 +23,8 @@ library
                      , Language.Python.Internal.Syntax
                      , Language.Python.Validate.Syntax
                      , Language.Python.Validate.Syntax.Error
+                     , Language.Python.Validate.Indentation
+                     , Language.Python.Validate.Indentation.Error
   build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0
   hs-source-dirs:      src
   default-language:    Haskell2010
