--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -28,7 +28,11 @@ library
   build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -O2 -Wall
+  ghc-options:         -O2
+                       -Wincomplete-patterns
+                       -Wincomplete-record-updates
+                       -Wunused-imports
+                       -Werror
 
 executable example
   main-is:             Main.hs
@@ -36,4 +40,8 @@ executable example
   hs-source-dirs:      example
   build-depends:       base >=4.9 && <4.11, lens, pyfactor
   default-language:    Haskell2010
-  ghc-options:         -O2 -Wall
+  ghc-options:         -O2
+                       -Wincomplete-patterns
+                       -Wincomplete-record-updates
+                       -Wunused-imports
+                       -Werror
