--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -25,7 +25,7 @@ library
                      , Language.Python.Validate.Syntax.Error
                      , Language.Python.Validate.Indentation
                      , Language.Python.Validate.Indentation.Error
-  build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0
+  build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0, parsers
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2
