--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -19,13 +19,14 @@ library
   exposed-modules:     Data.Validate
                      , Language.Python.Syntax
                      , Language.Python.Internal.Optics
+                     , Language.Python.Internal.Parse
                      , Language.Python.Internal.Render
                      , Language.Python.Internal.Syntax
                      , Language.Python.Validate.Syntax
                      , Language.Python.Validate.Syntax.Error
                      , Language.Python.Validate.Indentation
                      , Language.Python.Validate.Indentation.Error
-  build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0, parsers
+  build-depends:       base >=4.9 && <4.11, lens, type-level-sets >=0.8.6.0, parsers, trifecta
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2
