--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -51,3 +51,15 @@ executable example
                        -Wincomplete-record-updates
                        -Wunused-imports
                        -Werror
+
+test-suite tests
+  main-is:             Main.hs
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  build-depends:       base >=4.9 && <4.11, pyfactor, hedgehog
+  default-language:    Haskell2010
+  ghc-options:         -O2
+                       -Wincomplete-patterns
+                       -Wincomplete-record-updates
+                       -Wunused-imports
+                       -Werror
