--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -52,9 +52,10 @@ executable example
                        -Wunused-imports
                        -Werror
 
-test-suite tests
+test-suite pyfactor-tests
   main-is:             Main.hs
   type:                exitcode-stdio-1.0
+  other-modules:       Generators
   hs-source-dirs:      test
   build-depends:       base >=4.9 && <4.11, pyfactor, hedgehog
   default-language:    Haskell2010
