--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -57,7 +57,11 @@ test-suite pyfactor-tests
   type:                exitcode-stdio-1.0
   other-modules:       Generators
   hs-source-dirs:      test
-  build-depends:       base >=4.9 && <4.11, pyfactor, hedgehog
+  build-depends:       base >=4.9 && <4.11
+                     , pyfactor
+                     , hedgehog
+                     , lens
+                     , process
   default-language:    Haskell2010
   ghc-options:         -O2
                        -Wincomplete-patterns
