--- a/pyfactor.cabal
+++ b/pyfactor.cabal
@@ -62,6 +62,7 @@ test-suite pyfactor-tests
                      , hedgehog
                      , lens
                      , process
+                     , transformers
   default-language:    Haskell2010
   ghc-options:         -O2
                        -Wincomplete-patterns
